--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,13 @@
 	<groupId>com.github.christophelg</groupId>
 	<artifactId>patternas</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>Patternas</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 
 	<build>
@@ -16,7 +18,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.2</version>				
 				<configuration>
 					<transformers>
 						<transformer
@@ -39,15 +41,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>11.0.2</version>
+			<version>19.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
@@ -57,7 +53,7 @@
 		<dependency>
 			<groupId>com.beust</groupId>
 			<artifactId>jcommander</artifactId>
-			<version>1.27</version>
+			<version>1.48</version>
 		</dependency>
 	</dependencies>
 </project>
